优化 ID 生成器